load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "concept_check",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    deps = [
        "@boost//libs/preprocessor",
        "@boost//libs/config",
        "@boost//libs/type_traits",
        "@boost//libs/static_assert",
    ],
)
